fix weather displaying on mobile

--- a/my-app/src/Components/WeatherDisplay/WeatherDisplay.module.css
+++ b/my-app/src/Components/WeatherDisplay/WeatherDisplay.module.css
@@ -73,7 +73,11 @@
   .app {
     padding: 1rem;
   }
-  
+.weatherList {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1.5rem;
+}
   .card {
     padding: 1rem;
   }
